--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <div class="container">
     <h1>My Projects</h1>
     <p>Click on the links to view respective projects</p>
-    <a class="btn" href="https://github.com/your-username/your-repository">Data Analysis on Pokemon</a>
+    <a class="btn" href="https://akuson.github.io/projects/EDA%20Pokemon/index.html">Data Analysis on Pokemon</a>
   </div>
 </body>
 </html>
