Added the studies on NN and WT's.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
       text-decoration: none;
       border-radius: 4px;
       transition: background-color 0.3s ease;
+      margin-right: 10px; /* Added margin to create space between buttons */
+    }
+    
+    .btn:last-child {
+      margin-right: 0; /* Remove margin from the last button */
     }
     
     .btn:hover {
@@ -50,6 +55,8 @@
     <h1>My Projects</h1>
     <p>Click on the links to view respective projects</p>
     <a class="btn" href="https://akuson.github.io/projects/EDA Pokemon/md_format/code.html">Data Analysis on Pokemon</a>
+    <a class="btn" href="https://akuson.github.io/projects/Study of Neural Networks/md_page/code.html">Study of Neural Network</a>
+    <a class="btn" href="https://akuson.github.io/projects/Study of Wind Farms and Wind Turbine/md_page/model.html">Study of Wind Turbines</a>
   </div>
 </body>
 </html>
